refactor: upgrade base springboot version to 3.3.2 and refactor authentication system and add share document.